// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swiper snapshot > Swiper demo snapshot 0 1`] = `
<div>
  <div
    class="swiper swiper-initialized swiper-horizontal swiper-pointer-events swiper-watch-progress bui-swiper"
    style="padding-top: 0px; padding-bottom: 0px; overflow: hidden; width: 300px; height: 200px; --indicator-color: rgba(255, 255, 255, .4); --indicator-color-active: var(--bui-color-bg-view);"
  >
    <div
      class="swiper-wrapper"
      style="transition-duration: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
    >
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: lightgray; width: 100%; height: 100%;"
        >
          1
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: gray; width: 100%; height: 100%;"
        >
          2
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: darkgray; width: 100%; height: 100%;"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Swiper snapshot > Swiper demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 8px; --flex-wrap: nowrap;"
  >
    <button
      class="bui-btn bui-btn-outlined bui-btn-medium"
      type="button"
    >
      切换到1
    </button>
    <button
      class="bui-btn bui-btn-outlined bui-btn-medium"
      type="button"
    >
      切换到2
    </button>
    <button
      class="bui-btn bui-btn-outlined bui-btn-medium"
      type="button"
    >
      切换到3
    </button>
  </div>
  <div
    class="swiper swiper-initialized swiper-horizontal swiper-pointer-events swiper-watch-progress bui-swiper"
    style="padding-top: 0px; padding-bottom: 0px; overflow: hidden; width: 300px; height: 200px; --indicator-color: rgba(255, 255, 255, .4); --indicator-color-active: var(--bui-color-bg-view);"
  >
    <div
      class="swiper-wrapper"
      style="transition-duration: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
    >
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: lightgray; width: 100%; height: 100%;"
        >
          1
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: gray; width: 100%; height: 100%;"
        >
          2
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: darkgray; width: 100%; height: 100%;"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Swiper snapshot > Swiper demo snapshot 0 3`] = `
<div>
  <div
    class="swiper swiper-initialized swiper-horizontal swiper-pointer-events swiper-watch-progress bui-swiper"
    style="padding-top: 0px; padding-bottom: 0px; overflow: hidden; width: 300px; height: 200px; --indicator-color: rgba(255, 255, 255, .4); --indicator-color-active: var(--bui-color-bg-view);"
  >
    <div
      class="swiper-wrapper"
      style="transition-duration: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
    >
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: lightgray; width: 100%; height: 100%;"
        >
          1
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: gray; width: 100%; height: 100%;"
        >
          2
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: darkgray; width: 100%; height: 100%;"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Swiper snapshot > Swiper demo snapshot 0 4`] = `
<div>
  <div
    class="swiper swiper-initialized swiper-horizontal swiper-pointer-events swiper-watch-progress bui-swiper"
    style="padding-top: 0px; padding-bottom: 0px; overflow: hidden; width: 300px; height: 200px; --indicator-color: rgba(255, 255, 255, .4); --indicator-color-active: var(--bui-color-bg-view);"
  >
    <div
      class="swiper-wrapper"
      style="transition-duration: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
    >
      <div
        class="swiper-slide swiper-slide-duplicate"
        data-swiper-slide-index="2"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: darkgray; width: 100%; height: 100%;"
        >
          3
        </div>
      </div>
      <div
        class="swiper-slide"
        data-swiper-slide-index="0"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: lightgray; width: 100%; height: 100%;"
        >
          1
        </div>
      </div>
      <div
        class="swiper-slide"
        data-swiper-slide-index="1"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: gray; width: 100%; height: 100%;"
        >
          2
        </div>
      </div>
      <div
        class="swiper-slide"
        data-swiper-slide-index="2"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: darkgray; width: 100%; height: 100%;"
        >
          3
        </div>
      </div>
      <div
        class="swiper-slide swiper-slide-duplicate"
        data-swiper-slide-index="0"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: lightgray; width: 100%; height: 100%;"
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Swiper snapshot > Swiper demo snapshot 0 5`] = `
<div>
  <div
    class="swiper swiper-fade swiper-initialized swiper-horizontal swiper-pointer-events swiper-watch-progress bui-swiper"
    style="padding-top: 0px; padding-bottom: 0px; overflow: hidden; width: 300px; height: 200px; --indicator-color: rgba(255, 255, 255, .4); --indicator-color-active: var(--bui-color-bg-view);"
  >
    <div
      class="swiper-wrapper"
      style="transition-duration: 0ms;"
    >
      <div
        class="swiper-slide swiper-slide-duplicate"
        data-swiper-slide-index="2"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: darkgray; width: 100%; height: 100%;"
        >
          3
        </div>
      </div>
      <div
        class="swiper-slide"
        data-swiper-slide-index="0"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: lightgray; width: 100%; height: 100%;"
        >
          1
        </div>
      </div>
      <div
        class="swiper-slide"
        data-swiper-slide-index="1"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: gray; width: 100%; height: 100%;"
        >
          2
        </div>
      </div>
      <div
        class="swiper-slide"
        data-swiper-slide-index="2"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: darkgray; width: 100%; height: 100%;"
        >
          3
        </div>
      </div>
      <div
        class="swiper-slide swiper-slide-duplicate"
        data-swiper-slide-index="0"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: lightgray; width: 100%; height: 100%;"
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Swiper snapshot > Swiper demo snapshot 0 6`] = `
<div>
  <div
    class="swiper swiper-initialized swiper-vertical swiper-pointer-events swiper-watch-progress bui-swiper"
    style="padding-right: 0px; padding-left: 0px; overflow: hidden; width: 300px; height: 200px; --indicator-color: rgba(255, 255, 255, .4); --indicator-color-active: var(--bui-color-bg-view);"
  >
    <div
      class="swiper-wrapper"
      style="transition-duration: 0ms; transform: translate3d(0px, NaNpx, 0px);"
    >
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: lightgray; width: 100%; height: 100%;"
        >
          1
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: gray; width: 100%; height: 100%;"
        >
          2
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: darkgray; width: 100%; height: 100%;"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Swiper snapshot > Swiper demo snapshot 0 7`] = `
<div>
  <div
    class="swiper swiper-initialized swiper-horizontal swiper-pointer-events swiper-watch-progress bui-swiper"
    style="padding-top: 0px; padding-bottom: 0px; overflow: hidden; width: 300px; height: 200px; --indicator-color: #880000; --indicator-color-active: #FF0000;"
  >
    <div
      class="swiper-wrapper"
      style="transition-duration: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
    >
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: lightgray; width: 100%; height: 100%;"
        >
          1
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: gray; width: 100%; height: 100%;"
        >
          2
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: darkgray; width: 100%; height: 100%;"
        >
          3
        </div>
      </div>
    </div>
    <div
      class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal"
    />
  </div>
</div>
`;

exports[`Swiper snapshot > Swiper demo snapshot 0 8`] = `
<div>
  <div
    class="swiper swiper-initialized swiper-horizontal swiper-pointer-events swiper-watch-progress bui-swiper"
    style="padding-top: 0px; padding-bottom: 0px; overflow: hidden; width: 300px; height: 200px; --indicator-color: rgba(255, 255, 255, .4); --indicator-color-active: var(--bui-color-bg-view);"
  >
    <div
      class="swiper-wrapper"
      style="transition-duration: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
    >
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: lightgray; width: 100%; height: 100%;"
        >
          1
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: gray; width: 100%; height: 100%;"
        >
          2
        </div>
      </div>
      <div
        class="swiper-slide"
      >
        <div
          class="bui-stack"
          style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: darkgray; width: 100%; height: 100%;"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;
